Tons of generation tweaks